k8s/aws-lb-controller.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-load-balancer-controller
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aws-load-balancer-controller
  template:
    metadata:
      labels:
        app: aws-load-balancer-controller
    spec:
      containers:
      - name: controller
        image: amazon/aws-alb-ingress-controller:v2.6.0
        args:
        - --ingress-class=alb
        - --cluster-name=bedrock-eks
        - --aws-region=eu-west-1
      serviceAccountName: aws-load-balancer-controller
