k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: retail
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: nginx:1.27.2
        ports:
        - containerPort: 80
