k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: retail
spec:
  selector:
    app: ui
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
